@@ -25,6 +25,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hbase
+operator|.
+name|HBaseConfiguration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|http
 operator|.
 name|HttpServer
@@ -142,6 +156,11 @@ argument_list|,
 name|port
 argument_list|,
 name|findPort
+argument_list|,
+name|HBaseConfiguration
+operator|.
+name|create
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|webServer
