@@ -1251,6 +1251,7 @@ Release 0.90.0 - Unreleased
                (Nicolas Spiegelberg via Stack)
    HBASE-3303  Lower hbase.regionserver.handler.count from 25 back to 10
    HBASE-2467  Concurrent flushers in HLog sync using HDFS-895
+   HBASE-3349  Pass HBase configuration to HttpServer
 
 
   NEW FEATURES
